--- a/planningandacquiring/templates/planningandacquiring/k9_performance_report.html
+++ b/planningandacquiring/templates/planningandacquiring/k9_performance_report.html
@@ -1,7 +1,7 @@
 
 {% load static %}
 {% block content %} 
-
+{% load humanize %}
 {% if data %}
 
 <div class="ui segment" id="printableArea">
@@ -31,11 +31,11 @@
             <tr>
                 <td>{{data.0}}</td>
                 <td>{{data.1}}</td>
-                <td>{{data.2}}/{{data.3}}</td>
-                <td>{{data.4}}/{{data.5}}</td>
-                <td>{{data.6}}/{{data.7}}</td>
-                <td>{{data.8}}/{{data.9}}</td>
-                <td>{{data.10}}/{{data.11}}</td>
+                <td>{{data.2|intcomma}}/{{data.3|intcomma}}</td>
+                <td>{{data.4|intcomma}}/{{data.5|intcomma}}</td>
+                <td>{{data.6|intcomma}}/{{data.7|intcomma}}</td>
+                <td>{{data.8|intcomma}}/{{data.9|intcomma}}</td>
+                <td>{{data.10|intcomma}}/{{data.11|intcomma}}</td>
                 <td style="font-weight: bold;">{{data.12}}</td>
             </tr>
             {%endfor%}
