--- a/planningandacquiring/templates/planningandacquiring/training_report.html
+++ b/planningandacquiring/templates/planningandacquiring/training_report.html
@@ -1,6 +1,6 @@
 {% load static %}
 {% block content %} 
-
+{% load humanize %}
 {% if data %}
 
 <div class="ui segment" id="printableArea">
@@ -27,13 +27,13 @@
         </thead>
         <tbody>
             {% for data in data%}
-            <tr>
-                <td>{{data.0}}</td>
-                <td>{{data.1}}</td>
-                <td>{{data.2}}</td>
-                <td>{{data.3}}</td>
-                <td>{{data.4}}</td>
-                <td style="font-weight: bold;">{{data.5}}</td>
+            <tr class="right aligned">
+                <td class="left aligned">{{data.0}}</td>
+                <td class="left aligned">{{data.1}}</td>
+                <td class="left aligned">{{data.2}}</td>
+                <td>{{data.3|intcomma}}</td>
+                <td>{{data.4|intcomma}}</td>
+                <td style="font-weight: bold;">{{data.5|intcomma}}</td>
             </tr>
             {%endfor%}
         </tbody>
