--- a/profiles/templates/profiles/sidebar_reports.html
+++ b/profiles/templates/profiles/sidebar_reports.html
@@ -50,10 +50,10 @@
                             <i class="open folder alternate outline
                             icon"></i>Health Report
                         </a>
-                        <!-- <a href="{% url 'planningandacquiring:on_leave_date'%}" class="item">
+                        <a href="{% url 'planningandacquiring:on_leave_date'%}" class="item">
                             <i class="open folder alternate outline
                             icon"></i>Handler On-leayve Summary Report
-                        </a> -->
+                        </a>
                         <a href="{% url 'planningandacquiring:inventory_date'%}" class="item">
                             <i class="open folder alternate outline
                             icon"></i>Inventory Report
