--- a/training/templates/training/classify_k9_list.html
+++ b/training/templates/training/classify_k9_list.html
@@ -49,14 +49,14 @@
     {%if type_text%}
         {%if type_text == 'grading'%}
             <a class="item" data-tab="first">Unclassified</a>
-            <a class="item active" data-tab="third">On-Training</a>
+            <a class="item active" data-tab="third">For-Grading</a>
             {% else %}
             <a class="item active" data-tab="first">Unclassified</a>
-            <a class="item" data-tab="third">On-Training</a>
+            <a class="item" data-tab="third">For-Grading</a>
         {% endif %}
     {%else%}
         <a class="item active" data-tab="first">Unclassified</a>
-        <a class="item" data-tab="third">On-Training</a>
+        <a class="item" data-tab="third">For-Grading</a>
     {% endif %}
 </div>
 
