--- a/unitmanagement/templates/unitmanagement/classified_list.html
+++ b/unitmanagement/templates/unitmanagement/classified_list.html
@@ -18,8 +18,8 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <!--<th>Breed</th>-->
-                <!--<th>Color</th>-->
+                <th>Breed</th>
+                <th>Capability</th>
                 <!--<th>Sex</th>-->
                 <th>Age</th>
                 <th></th>
@@ -29,8 +29,8 @@
             {% for data in data %}
             <tr>
                 <td>{{data.name}}</td>
-                <!--<td >{{data.breed}}</td>-->
-                <!--<td>{{data.color}}</td>-->
+                <td >{{data.breed}}</td>
+                <td>{{data.capability}}</td>
                 <!--<td >{{data.sex}}</td>-->
                 <td>{{data.age}} years and {{data.month_remainder}} months</td>
                 <td style="text-align:center;" class="two wide">
