--- a/planningandacquiring/templates/planningandacquiring/breeding_list.html
+++ b/planningandacquiring/templates/planningandacquiring/breeding_list.html
@@ -35,8 +35,8 @@
     <table id="tabledata1" class="ui four column celled table">
         <thead class="center aligned">
         <tr>
-            <th class="ui pink">Mother</th>
-            <th>Father</th>
+            <th class="ui pink">Dam</th>
+            <th>Sire</th>
             <th>Mating Date</th>
             <th></th>
         </tr>
@@ -78,8 +78,8 @@
 	<table id="tabledata2" class="ui four column celled table">
         <thead class="center aligned">
         <tr>
-            <th class="ui pink">Mother</th>
-            <th>Father</th>
+            <th class="ui pink">Dam</th>
+            <th>Sire</th>
             <th>Mating Date</th>
             <th></th>
         </tr>
