--- a/planningandacquiring/templates/planningandacquiring/budgeting.html
+++ b/planningandacquiring/templates/planningandacquiring/budgeting.html
@@ -41,7 +41,7 @@
                         <thead>
                             <tr>
                                 <th>Breed</th>
-                                <th>Diseased (count)</th>
+                                <th>Deceased (count)</th>
                             </tr>
                         </thead>
                         <tbody>
