--- a/profiles/templates/profiles/sidebar_reports.html
+++ b/profiles/templates/profiles/sidebar_reports.html
@@ -52,7 +52,7 @@
                         </a>
                         <a href="{% url 'planningandacquiring:on_leave_date'%}" class="item">
                             <i class="open folder alternate outline
-                            icon"></i>Handler On-leayve Summary Report
+                            icon"></i>Handler On-leave Summary Report
                         </a>
                         <a href="{% url 'planningandacquiring:inventory_date'%}" class="item">
                             <i class="open folder alternate outline
