--- a/profiles/templates/profiles/user_detail.html
+++ b/profiles/templates/profiles/user_detail.html
@@ -3,11 +3,11 @@
     {{user_s}}
     <div class="sub header">User details for {{user_s}}</div>
 </h1>
-{% if user_s.status == 'Dead'%}
+{% if user_s.status == 'Died'%}
 <div class="ui negative message">
     <i class="close icon"></i>
     <div class="header">
-      {{user_s}} is Dead....
+      {{user_s}} is Deceased....
     </div>
   </p>
 </div>
