--- a/unitmanagement/templates/unitmanagement/k9_incident.html
+++ b/unitmanagement/templates/unitmanagement/k9_incident.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="ui inverted right aligned segment" style="padding: 0px;">
-            <button onclick="return confirm('Are you sure?')" class = "ui button green" type="submit" name='incident'>{{ actiontype }}</button>
+            <button onclick="return confirm('Are you sure?')" class = "ui button green" type="submit" name='incident_form'>{{ actiontype }}</button>
         </div>
     </form>
 </div>
