--- a/unitmanagement/templates/unitmanagement/on_leave_list.html
+++ b/unitmanagement/templates/unitmanagement/on_leave_list.html
@@ -19,7 +19,7 @@
             <tr>
                 <th>Date Requested</th>
                 <th>Handler</th>
-                <th>Dates</th>
+                <th>Leave Dates</th>
                 <th>Duration</th>
                 <th></th>
             </tr>
