--- a/profiles/templates/profiles/add_user_account.html
+++ b/profiles/templates/profiles/add_user_account.html
@@ -40,19 +40,17 @@
           <div class="column">
               <form class="ui inverted equal width form" action="{% url 'profiles:add_user_account' %}" method="POST">
                   {% csrf_token %}
-                  {% for field in form %}
-                  <p>
-                    {{ field.label_tag }}<br>
-                    {{ field }}
-                    {% if field.help_text %}
-                      <small style="color: grey">{{ field.help_text }}</small>
-                    {% endif %}
-                    {% for error in field.errors %}
-                      <p style="color: red">{{ error }}</p>
-                    {% endfor %}
-                  </p>
-                {% endfor %}
-              
+                  <div class="fields">
+                      <div class="field">
+                        <label>Email Address</label>
+                        {{form.email_address}}
+                      </div>
+                      <div class="field">
+                          <label>Password</label>
+                          {{form.password}}
+                      </div>
+                  </div>
+
                   <div class="ui inverted right aligned segment" style="padding: 0px;" style="border-width: 0px;">
                       <button class = "ui button green" type="submit" onclick="return confirm('Are you sure?')">Submit</button>
                   </div>
