--- a/profiles/templates/profiles/vet_dashboard.html
+++ b/profiles/templates/profiles/vet_dashboard.html
@@ -67,7 +67,7 @@
                                             <div class="ten wide column left aligned">
                                                     <div class="ui grid">
                                                         {% for a,b in yearly_list%}
-                                                        <div class="column">
+                                                        <div class="eight wide column" style="padding:0px;">
                                                             <strong>{{a}} - </strong>
                                                             <span style="color:orangered;">{{b}}</span>
                                                         </div>
@@ -219,16 +219,16 @@
                             </div>
                         </div>
                         <div class="column">
-                                <div class="ui raised center aligned segment">
-                                <div class="ui statistic">
-                                        <div class="value">
-                                            <i class="calendar alternate orange icon">{{pending_schedule}}</i>
-                                        </div>
-                                        <div class="label">
-                                        <a href="{% url 'unitmanagement:k9_checkup_pending'%}">PHEX TO BE SCHEDULED</a>
-                                        </div>
-                                    </div>
-                                </div>
+                                <!--<div class="ui raised center aligned segment">-->
+                                <!--<div class="ui statistic">-->
+                                        <!--<div class="value">-->
+                                            <!--<i class="calendar alternate orange icon">{{pending_schedule}}</i>-->
+                                        <!--</div>-->
+                                        <!--<div class="label">-->
+                                        <!--<a href="{% url 'unitmanagement:k9_checkup_pending'%}">PHEX TO BE SCHEDULED</a>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                <!--</div>-->
                         </div>
                     </div>
                 </div>
