--- a/profiles/templates/profiles/sidebar_reports.html
+++ b/profiles/templates/profiles/sidebar_reports.html
@@ -8,6 +8,10 @@
             <div class="three wide column">
                     <div class="ui pointing vertical menu">
                         <a class="item"> <b>Reports Menu</b></a>
+                        <a href="{% url 'planningandacquiring:demand_supply_date'%}" class="item">
+                            <i class="open folder alternate outline icon"></i>K9
+                            Demand and Supply Report
+                        </a>
                         <a href="{% url 'planningandacquiring:k9_performance_date'%}" class="item">
                             <i class="open folder alternate outline icon"></i>K9 Performance Report
                         </a>
