--- a/planningandacquiring/templates/planningandacquiring/port_report.html
+++ b/planningandacquiring/templates/planningandacquiring/port_report.html
@@ -19,33 +19,39 @@
     <table class="ui small celled structured column table">
         <thead class="center aligned">
           <tr>
-              <th colspan="9">{{data1}}</th>
+              <th colspan="10">{{data1}}</th>
           </tr>
           <tr>
-                <th>Port</th>
-                <th class="three wide">Team</th>
-                <th class="three wide">Team Leader</th>
-                <th class="one wide">Maritime Traffic</th>
-                <th class="one wide">EDD Incident</th>
-                <th class="one wide">NDD Incident</th>
-                <th class="one wide">SAR Incident</th>
-                <th class="one wide">Other Incident</th>
-                <th class="one wide">Total Incident</th>
+                <th rowspan="2">Port</th>
+                <th rowspan="2">Team</th>
+                <th rowspan="2">Maritime Traffic</th>
+                <th colspan="4">Incidents</th>
+                <th colspan="3">K9 Deployed</th>
+            </tr>
+            <tr>
+                <th>EDD Incident</th>
+                <th>NDD Incident</th>
+                <th>SAR Incident</th>
+                <th>Other Incident</th>
+                <th>EDD Deployed</th>
+                <th>NDD Deployed</th>
+                <th>SAR Deployed</th>
             </tr>
         </thead>
         <tbody>
             {% for data in data%}
                 {% if data.0.area == data1%}
                     <tr class="right aligned">
-                        <td class="left aligned">{{data.0}}</td>
+                        <td class="left aligned">{{data.0.place}}</td>
                         <td class="left aligned">{{data.1}}</td>
-                        <td class="left aligned">{{data.2}}</td>
+                        <td>{{data.2|intcomma}}</td>
                         <td>{{data.3|intcomma}}</td>
                         <td>{{data.4|intcomma}}</td>
                         <td>{{data.5|intcomma}}</td>
                         <td>{{data.6|intcomma}}</td>
                         <td>{{data.7|intcomma}}</td>
                         <td>{{data.8|intcomma}}</td>
+                        <td>{{data.9|intcomma}}</td>
                     </tr>   
                 {% endif %}         
             {%endfor%}
