Post def + changes
Phex deployment date
Training grade saving issue on a certain stages
Training stage not displayed on Dashboard
Phex checkbox should not be required to be checked
GET issue after confirmation of Pre_Deployment_Items
 PHEX scheduling add capability to manually schedule
	Remove automatic phex scheduling after deployment scheduling
	Add notification of how many dogs are needed to be scheduled for phex
Missing MIA list (Unconfirmed Arrival)
Appearing "K9s Deployed" message in login
Fix Team Name str for Team Assignments

--- a/profiles/templates/profiles/sidebar_um.html
+++ b/profiles/templates/profiles/sidebar_um.html
@@ -79,9 +79,9 @@
                             <a href="{% url 'unitmanagement:reproductive_list'%}" class="item">
                                 <i class="venus icon"></i>Reproductive Cycle
                             </a>
-                             <!--<a href="{% url 'unitmanagement:k9_checkup_pending'%}" class="item">-->
-                                <!--<i class="calendar icon"></i>Schedule K9 Checkups for Initial Deployment-->
-                            <!--</a>-->
+                             <a href="{% url 'unitmanagement:k9_checkup_pending'%}" class="item">
+                                <i class="calendar icon"></i>Schedule K9 Checkups for Initial Deployment
+                            </a>
                             <a href="{% url 'unitmanagement:k9_checkup_list_today'%}" class="item">
                                 <i class="clipboard list icon"></i>K9s for Checkup
                             </a>
