--- a/profiles/templates/profiles/vet_dashboard.html
+++ b/profiles/templates/profiles/vet_dashboard.html
@@ -219,16 +219,16 @@
                             </div>
                         </div>
                         <div class="column">
-                                <!--<div class="ui raised center aligned segment">-->
-                                <!--<div class="ui statistic">-->
-                                        <!--<div class="value">-->
-                                            <!--<i class="calendar alternate orange icon">{{pending_schedule}}</i>-->
-                                        <!--</div>-->
-                                        <!--<div class="label">-->
-                                        <!--<a href="{% url 'unitmanagement:k9_checkup_pending'%}">PHEX TO BE SCHEDULED</a>-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                <!--</div>-->
+                                <div class="ui raised center aligned segment">
+                                <div class="ui statistic">
+                                        <div class="value">
+                                            <i class="calendar alternate orange icon">{{pending_schedule}}</i>
+                                        </div>
+                                        <div class="label">
+                                        <a href="{% url 'unitmanagement:k9_checkup_pending'%}">PHEX TO BE SCHEDULED</a>
+                                        </div>
+                                    </div>
+                                </div>
                         </div>
                     </div>
                 </div>
