--- a/profiles/templates/profiles/handler_dashboard.html
+++ b/profiles/templates/profiles/handler_dashboard.html
@@ -127,27 +127,27 @@
 
                         {% if k9.training_status == "On-Training" %}
 
-                        {% if k9.training == "Stage 0" %}
+                        {% if k9.training_level == "Stage 0" %}
                         <th>Training Stage: Stage 1.1 </th>
-                        {% elif k9.training == "Stage 1.1" %}
+                        {% elif k9.training_level == "Stage 1.1" %}
                         <th>Training Stage: Stage 1.2 </th>
-                        {% elif k9.training == "Stage 1.2" %}
+                        {% elif k9.training_level == "Stage 1.2" %}
                         <th>Training Stage: Stage 1.3 </th>
 
-                        {% elif k9.training == "Stage 1.3" %}
+                        {% elif k9.training_level == "Stage 1.3" %}
                         <th>Training Stage: Stage 2.1 </th>
-                        {% elif k9.training == "Stage 2.1" %}
+                        {% elif k9.training_level == "Stage 2.1" %}
                         <th>Training Stage: Stage 2.2 </th>
-                        {% elif k9.training == "Stage 2.2" %}
+                        {% elif k9.training_level == "Stage 2.2" %}
                         <th>Training Stage: Stage 2.3 </th>
 
-                        {% elif k9.training == "Stage 2.3" %}
+                        {% elif k9.training_level == "Stage 2.3" %}
                         <th>Training Stage: Stage 3.1 </th>
-                        {% elif k9.training == "Stage 3.1" %}
+                        {% elif k9.training_level == "Stage 3.1" %}
                         <th>Training Stage: Stage 3.2 </th>
-                        {% elif k9.training == "Stage 3.2" %}
+                        {% elif k9.training_level == "Stage 3.2" %}
                         <th>Training Stage: Stage 3.3 </th>
-                        {% elif k9.training == "Stage 3.3" %}
+                        {% elif k9.training_level == "Stage 3.3" %}
                         <th>Training Stage: Final Stage</th>
                         {% endif %}
 
