--- a/profiles/templates/profiles/sidebar_reports.html
+++ b/profiles/templates/profiles/sidebar_reports.html
@@ -15,6 +15,9 @@
                         <a href="{% url 'planningandacquiring:k9_performance_date'%}" class="item">
                             <i class="open folder alternate outline icon"></i>K9 Performance Report
                         </a>
+                        <a href="{% url 'planningandacquiring:supplier_date'%}" class="item">
+                            <i class="open folder alternate outline icon"></i>Supplier Report
+                        </a>
                         <a href="{% url 'planningandacquiring:fou_accomplishment_date'%}" class="item">
                             <i class="open folder alternate outline icon"></i>FOU 
                             Accomplishment Summary Report
@@ -57,6 +60,10 @@
                         <a href="{% url 'planningandacquiring:on_leave_date'%}" class="item">
                             <i class="open folder alternate outline
                             icon"></i>Handler On-leave Summary Report
+                        </a>
+                        <a href="{% url 'planningandacquiring:adoption_date'%}" class="item">
+                            <i class="open folder alternate outline
+                            icon"></i>Adoption Report
                         </a>
                         <a href="{% url 'planningandacquiring:inventory_date'%}" class="item">
                             <i class="open folder alternate outline
