--- a/training/templates/training/for_adoption_list.html
+++ b/training/templates/training/for_adoption_list.html
@@ -1,5 +1,5 @@
 {% extends "profiles/sidebar_adoption.html" %}
-
+{% load humanize %}
 {% block content %}
 <div class="ui inverted segment" style="padding:20px;">
     <h3 class="ui header">{{ title }}</h3>
@@ -14,13 +14,14 @@
     <a class="item" data-tab="second">Adopted</a>
 </div>
 <div class="ui tab segment active" data-tab="first">
-    <table id="tabledata1" class="ui four column celled table">
+    <table id="tabledata1" class="ui five column celled table">
         <thead>
             <tr>
                 <th>Name</th>
                 <th>Breed</th>
                 <th>Sex</th>
-                <th>Age</th>
+                <th>Age (Years)</th>
+                <th>Age (Days)</th>
             </tr>
         </thead>
         <tbody>
@@ -31,43 +32,68 @@
                 </td>
                 <td>{{data.breed}}</td>
                 <td>{{data.sex}}</td>
-                <td>{{data.age}}</td>
+                <td class="right aligned">{{data.age|intcomma}}</td>
+                <td class="right aligned">{{data.age_days|intcomma}}</td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
 <div class="ui tab segment" data-tab="second">
-    <table id="tabledata2" class="ui four column celled table">
+    <table id="tabledata2" class="ui celled table">
         <thead>
             <tr>
                 <th>Name</th>
                 <th>Breed</th>
                 <th>Sex</th>
-                <th>Age</th>
+                <th>Age (Years)</th>
+                <th>Age (Days)</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
             {% for data in adopted %}
             <tr>
                 <td>
-                    <a href="{% url 'training:adoption_details' data.id %}">{{data.name}}</a>
+                    <a href="{% url 'training:adoption_details' data.id %}">{{data.k9.name}}</a>
                 </td>
-                <td>{{data.breed}}</td>
-                <td>{{data.sex}}</td>
-                <td>{{data.age}}</td>
+                <td>{{data.k9.breed}}</td>
+                <td class="two wide">{{data.k9.sex}}</td>
+                <td class="right aligned two wide">{{data.k9.age|intcomma}}</td>
+                <td class="right aligned two wide">{{data.k9.age_days|intcomma}}</td>
+                <td class="two wide center aligned">
+                    <i class="ui small primary button returned_btn" id={{data.k9.id}}>Returned</i>
+                </td>
             </tr>
             {% endfor %}
         </tbody>
     </table>
 </div>
+
+<div class="ui large modal" id = 'id_data'></div>
+
 <script type="text/javascript">
 
-    $(document).ready(function() {
-        $('#tabledata1').DataTable();
-        $('#tabledata2').DataTable();
-        $('.menu .item').tab();
-    } );
+  
+    $('#tabledata1').DataTable();
+    $('#tabledata2').DataTable();
+    $('.menu .item').tab();
+  
+    $( ".returned_btn" ).bind('click', function() {
+        var url = 'adoption-list/ajax_load_adoption';  
+        var id = $(this).attr('id')
+        $('.ui.large.modal').modal('show');
+        $.ajax({                         
+            url: url,                  
+            data: {
+            'id': id       
+            },
+            success: function (data) {  
+                $("#id_data").html(data);
+            }
+        });
+        
+    });
 
 </script>
  {% endblock %}
