--- a/planningandacquiring/templates/planningandacquiring/adoption_date.html
+++ b/planningandacquiring/templates/planningandacquiring/adoption_date.html
@@ -34,7 +34,7 @@
 <script>
 
     function submit_function(){
-        var url = 'supplier_report';  
+        var url = 'adoption_report';  
         var date_from =  $('#id_date_from').val();
         var date_to = $('#id_date_to').val();
         $.ajax({                       
