--- a/unitmanagement/templates/unitmanagement/vaccination_list.html
+++ b/unitmanagement/templates/unitmanagement/vaccination_list.html
@@ -62,6 +62,15 @@
         </thead>
         <tbody>
             {% for data in k9_dh %}
+            {% if data.1.disease == '2nd dose DHPPiL+CV'%}
+            <tr>
+                <td>{{data.0}}</td>
+                <td>{{data.0.age_days}}</td>
+                <td>{{data.1.disease}} Vaccination</td>
+                <td class="three wide column center aligned"><a href="#"
+                class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-vac='{{data.1.disease}}' data-type='DHPP'>Select</a></td>
+            </tr>
+            {%else%}
             <tr>
                 <td>{{data.0}}</td>
                 <td>{{data.0.age_days}}</td>
@@ -69,6 +78,7 @@
                 <td class="three wide column center aligned"><a href="#"
                 class="ui tiny basic blue button btn_modal" id='{{data.0.id}}' data-vac='{{data.1.disease}}' data-type='DHPP'>Select</a></td>
             </tr>
+            {%endif%}
             {% endfor %}
         </tbody>
     </table>
